--- a/CreArte/Views/Compras/Create.cshtml
+++ b/CreArte/Views/Compras/Create.cshtml
@@ -85,9 +85,8 @@
 
                                     <!-- Imagen -->
                                     <td>
-                                        <img class="img-thumbnail js-prod-img" data-row="@i"
-                                             src="" alt="Sin imagen"
-                                             style="max-height:80px;max-width:80px;object-fit:contain;" />
+                                        <img class="img-thumbnail js-prod-img ua-img-thumb-fila" data-row="@i"
+                                             src="" alt="N"/>
                                     </td>
 
                                     <!-- Cantidad -->
@@ -200,9 +199,8 @@
                             class="form-control producto js-prod" data-row="${i}" required></select>
                 </td>
                 <td>
-                    <img class="img-thumbnail js-prod-img" data-row="${i}"
-                         src="" alt="Sin imagen"
-                         style="max-height:80px;max-width:80px;object-fit:contain;" />
+                    <img class="img-thumbnail js-prod-img ua-img-thumb-fila" data-row="${i}"
+                         src="" alt="N"/>
                 </td>
                 <td class="text-end">
                     <input name="Lineas[${i}].Cantidad" type="number" min="1"
