--- a/CreArte/Views/Compras/Edit.cshtml
+++ b/CreArte/Views/Compras/Edit.cshtml
@@ -68,9 +68,8 @@
                             </td>
 
                             <td>
-                                <img class="img-thumbnail js-prod-img" data-row="@i"
-                                     src="" alt="Sin imagen"
-                                     style="max-height:60px;max-width:120px;object-fit:contain;" />
+                                <img class="img-thumbnail js-prod-img ua-img-thumb-fila" data-row="@i"
+                                     src="" alt="N"/>
                             </td>
 
                             <td class="text-end">
@@ -194,8 +193,7 @@
                             
                         </td>
                         <td>
-                            <img class="img-thumbnail js-prod-img" data-row="${i}" src="" alt="Sin imagen"
-                                 style="max-height:60px;max-width:120px;object-fit:contain;" />
+                            <img class="img-thumbnail js-prod-img ua-img-thumb-fila" data-row="${i}" src="" alt="N"/>
                         </td>
                         <td class="text-end">
                         <input name="Lineas[${i}].Cantidad" type="number" min="1" class="form-control text-end" required />
