--- a/CreArte/Views/Compras/Index.cshtml
+++ b/CreArte/Views/Compras/Index.cshtml
@@ -1,5 +1,4 @@
-﻿@* @model IEnumerable<CompraIndexRowVM> *@
-@model CreArte.ModelsPartial.ComprasIndexVM
+﻿@model CreArte.ModelsPartial.ComprasIndexVM
 
 @{
     ViewData["Title"] = "Compras";
@@ -21,7 +20,6 @@
 }
 
 <div class="container-fluid py-3">
-    <div class="ua-card">
         <!-- =========================
              Barra superior
              ========================= -->
@@ -335,7 +333,6 @@
                 </ul>
             </nav>
         }
-    </div>
 </div>
 
 @section Scripts{
